fix bug double scroll + map a 100% de la page #287

--- a/frontend/src/modules/contact/contact-map-form/contact-map-form.component.scss
+++ b/frontend/src/modules/contact/contact-map-form/contact-map-form.component.scss
@@ -2,7 +2,10 @@ map-card {
     min-height: 91vh;
 }
 
+.map-content{
+    margin-top: -5px;
+}
 .form {
-    max-height: 92vh;
+    max-height: 94vh;
     overflow-y: auto;
 }
