--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -6,19 +6,27 @@
 @import '~@swimlane/ngx-datatable/release/themes/material.css';
 @import '~@swimlane/ngx-datatable/release/assets/icons.css';
 
-html, body, material-app, mat-sidenav-container, mat-sidenav-content{
+html, body, material-app, mat-sidenav-container{
   margin: 0;
   width: 100%;
   height: 100%;
 }
 
+mat-sidenav-content {
+  height: 100%;
+}
+
+.mat-toolbar{
+  min-height: 5vh !important;
+}
+.mat-toolbar-row{
+  height:5vh !important;
+}
 
 .app-content {
-  height: 94vh;
     background-color: $solitude;
-    // height: calc(100% - 64px);
-    overflow: auto;
-    padding: 10px 15px 10px 15px;
+    height: calc(100% - 5vh);
+    padding-top: 5px;
     // min-height: 100vh;
 }
 
